--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "mihaildev/yii2-elfinder": "*",
         "mihaildev/yii2-ckeditor": "*",
-        "budyaga/yii2-cropper": "*"
+        "budyaga/yii2-cropper": "*",
+        "onmotion/yii2-gallery": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
